Fixing alignment of details

--- a/repo-details/src/App.css
+++ b/repo-details/src/App.css
@@ -140,6 +140,7 @@ body {
   width: 90%;
 
   padding: 40px;
+  margin: 25px;
   
   
 
